--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "luxon": "^3.4.4",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-element-dropdown": "^2.10.1",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "^4.9.0",
