--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "formik": "^2.4.5",
     "luxon": "^3.4.4",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-mmkv": "^2.11.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
